--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
+cycler==0.10.0
+kiwisolver==1.3.1
+matplotlib==3.4.2
+numpy==1.21.0
+Pillow==8.3.0
+pkg-resources==0.0.0
 pycurl==7.43.0.6
+pyparsing==2.4.7
+python-dateutil==2.8.1
+six==1.16.0
 toml==0.10.2
